<resources>
    <string name="app_name">storemanager</string>
    <string name="login_user_name">User Name</string>
    <string name="login_password">Password</string>
    <string name="forgot_username_forgot_password">Forgot Username/Password ?</string>
    <string name="welcome">WELCOME</string>
    <string name="to_the">TO THE</string>
    <string name="ceragem_store">CERAGEM STORE!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="coupan">Coupan</string>
    <string name="order">Order</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="prouct_name">Product Name</string>
    <string name="price">Price</string>
    <string name="fname">Frist Name</string>
    <string name="lname">Last Name</string>
    <string name="coupons_name">Coupons Name</string>
    <string name="conf_password">Confirm Password</string>
    <string name="branch_name">Branch Name</string>
    <string name="address">Address</string>
    <string name="customer">Customer</string>
    <string name="user">USER</string>
    <string name="branch">Branch</string>
    <string name="err_msg_first_name">Enter User Name</string>
    <string name="err_msg_password">Enter Password</string>
    <string name="err_msg_branch_name">Enter Branch Name</string>
    <string name="err_msg_branch_address">Enter Branch Address</string>
    <string name="err_msg_number">Enter Mobile Number</string>
    <string name="err_msg_valid_number">enter 10 digits only</string>
    <string name="err_msg_email">Enter Email Address</string>
    <string name="err_msg_address">Enter Address</string>
    <string name="err_msg_customer_name">select customer name</string>
    <string name="err_msg_product">select product</string>
    <string name="err_msg_coupan_name">Enter Coupan Name</string>
    <string name="err_msg_coupan_price">Enter Coupan Price</string>
    <string name="err_msg_total">Please Check Total</string>
    <string name="err_msg_product_name">Enter Product Name</string>
    <string name="err_msg_product_price">Enter Product Price</string>
</resources>
